# sajufinance

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/commands/: dev.md  reset-db.md
.claude/skills/saju-domain/: SKILL.md
.github/workflows/: release.yml
backend/: .env.example  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/data/: korean_stocks.json
backend/routers/: compatibility.py  portfolio.py  rebalance.py  saju.py
backend/services/: ceo_search_service.py  gemini_service.py  portfolio_service.py  saju_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ApiKeyModal.tsx  CompatibilityPage.tsx  IntroPage.tsx  LangToggle.tsx  RebalancingReportPage.tsx  Step1SajuInput.tsx  Step2PortfolioInput.tsx  Step3Results.tsx
frontend/src/i18n/: en.ts  index.ts  ko.ts
